# ChangeLog for sys-apps/portage
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Id$

*portage-2.2.01.17063 (23 Oct 2010)

  23 Oct 2010; Fabian Groffen <grobian@gentoo.org>
  portage-2.2.01.16711.ebuild, +portage-2.2.01.17063.ebuild:
  Drop EAPI=2 from 2.2.01.16711, add testing version up-to-date with master

  23 Oct 2010; Fabian Groffen <grobian@gentoo.org>
  portage-2.2.01.16711.ebuild:
  Sync ipc enabling/disabling code from portage-2.2.0_alpha1

*portage-2.2.01.16711 (29 Sep 2010)

  29 Sep 2010; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.01.16706.ebuild, +portage-2.2.01.16711.ebuild:
  Bump for preserved-libs on ELF-system fixes

*portage-2.2.01.16706 (29 Sep 2010)

  29 Sep 2010; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.01.16626.ebuild, -portage-2.2.01.16692.ebuild,
  +portage-2.2.01.16706.ebuild:
  Drop broken versions wrt preserve-libs, add fixed one

*portage-2.2.01.16692 (28 Sep 2010)

  28 Sep 2010; Fabian Groffen <grobian@gentoo.org>
  +portage-2.2.01.16692.ebuild:
  Bump, add macossandbox support by Michael Weiser

*portage-2.2.01.16626 (25 Sep 2010)

  25 Sep 2010; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.01.16616.ebuild, +portage-2.2.01.16626.ebuild, metadata.xml:
  Replace snapshot, disable ipc by default as it is causing too many
  problems

*portage-2.2.01.16616 (23 Sep 2010)

  23 Sep 2010; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.01.16610.ebuild, +portage-2.2.01.16616.ebuild:
  Replace snapshot for bug #338441

  22 Sep 2010; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.15838.ebuild, -portage-2.2.01.15417.ebuild:
  Drop some versions now we know that at least 15553 was stable enough (off
  git)

*portage-2.2.01.16610 (22 Sep 2010)

  22 Sep 2010; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.01.16365.ebuild, +portage-2.2.01.16610.ebuild:
  Drop masked version (bug #337945), new snapshot for a new try

*portage-2.2.01.16365 (17 Sep 2010)
